fixes sizes-page

--- a/src/html/pages/sizes-page.html
+++ b/src/html/pages/sizes-page.html
@@ -20,7 +20,7 @@
             </div>
             </nav>
             <div class="sizes-page" data-aos="animate-in-view">
-                <div class="container sizes-page__container">
+                <div class="container-alt sizes-page__container">
             <div class="sizes-page-grid" x-data="{sizesTab: 'woman'}">
                 <ul class="sizes-page-grid__tabs" role="list">
                     <li @click="sizesTab = 'woman'" :class="{'active': sizesTab === 'woman'}"><span>женские размеры</span></li>
