fixed meta title

--- a/src/html/pages/order-notify.html
+++ b/src/html/pages/order-notify.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 	@@include('../parts/head.html',{
-	"title":"Страница Размеров"
+	"title":"Страница Уведомления заказов"
 	})
 	<body x-data="{mobileMenu:false, headerSearch: false, headerMegaMenu: false, telModal: false,verifyTelModal: false}" :class="{'overflow-hidden': telModal === true || verifyTelModal === true}">
 		<script src="js/main.min.js" defer></script>
