ready my-orders page

--- a/src/html/pages/order-notify.html
+++ b/src/html/pages/order-notify.html
@@ -88,7 +88,7 @@
                  </li>
                 </template>
             </ul>
-            <ul role="list" class="pagination notifications__pagination">
+            <ul role="list" class="pagination personal-cabinet__pagination notifications__pagination">
                 <li class="active"><a href="#">1</a></li>
                 <li><a href="#">2</a></li>
                 <li><a href="#">3</a></li>
