--- a/src/html/parts/head.html
+++ b/src/html/parts/head.html
@@ -30,5 +30,9 @@ href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css"
 />
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 <link rel="stylesheet" href="styles/main.css" />
 </head>
