--- a/src/html/pages/order-making.html
+++ b/src/html/pages/order-making.html
@@ -697,6 +697,50 @@
             </section>
             </div>
 		</main>
+        <script defer>
+         const orderMakingForm = new Swiper('.order-making__form', {
+  slidesPerView: 1,
+  autoHeight:true,
+  allowTouchMove:false,
+  navigation: {
+    nextEl: '.order-making__to-next-step-btn',
+    prevEl: '.order-making__return-back-btn',
+  },
+
+});
+
+function slideToIndexSlide0() {
+  document.querySelector('.order-making__to-slide-1-btn').addEventListener('click', ()=>{
+    orderMakingForm.slideTo(0);
+  });
+}
+
+slideToIndexSlide0();
+
+function slideToIndexSlide1() {
+  document.querySelector('.order-making__to-next-step-btn--to-office-data').addEventListener('click', ()=>{
+    orderMakingForm.slideTo(1);
+  });
+}
+
+slideToIndexSlide1();
+
+function slideToIndexSlide2() {
+  document.querySelector('.order-making__to-next-step-btn--to-delivery-home-data').addEventListener('click', ()=>{
+    orderMakingForm.slideTo(2);
+  });
+}
+
+slideToIndexSlide2();
+
+function slideToIndexSlide3() {
+  document.querySelector('.order-making__to-next-step-btn--to-slide-3').addEventListener('click', ()=>{
+    orderMakingForm.slideTo(3);
+  });
+}
+
+slideToIndexSlide3();
+        </script>
 		@@include('../parts/footer.html')
 	</body>
 </html>
