--- a/src/html/parts/head.html
+++ b/src/html/parts/head.html
@@ -14,9 +14,9 @@
 <link rel="canonical" href="https://www.mywebsite.com/page">
 <link rel="icon" href="/favicon.ico">
 <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-<link rel="manifest" href="/my.webmanifest">
-<meta name="theme-color" content="#fff" />
+<link rel="apple-touch-icon" href="/pwa/favicon.png">
+<link rel="manifest" href="/src/pwa/manifest.json">
+<meta name="theme-color" content="#fff"/>
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link
   rel="stylesheet"
