--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -430,7 +430,7 @@
 	<h2>Весенняя коллекция аксессуаров 2022</h2>
 	<p>Базовые вещи на каждый день</p>
 	<img loading="lazy" decoding="async" src="resources/images/accesories-collection-title-img.jpg" alt="image" width="390" height="600">
-	<a href="#" class="accesories-collection__title-btn">смотреть коллекцию</a>
+	<a href="#" class="variant-2-btn accesories-collection__title-btn">смотреть коллекцию</a>
     </div>
 	<ul class="accesories-collection__list" role="list">
 		<li>
@@ -505,7 +505,7 @@
 				<img loading="lazy" decoding="async" src="resources/images/together-with-card-img-1.jpg" alt="image" width="335" height="340">
 				<figcaption>
 					<p>Подпишитесь на нас в социальных сетях и упоминайте <span>@real_action</span> в подписи, чтобы продемонстрировать свой фирменный стиль</p>
-					<a href="#" class="together-with__card-link together-with__card-link--big">перейти в instagram</a>
+					<a href="#" class="variant-2-btn together-with__card-link together-with__card-link--big">перейти в instagram</a>
 				</figcaption>
 			</figure>
 		</li>
