--- a/src/html/parts/head.html
+++ b/src/html/parts/head.html
@@ -14,8 +14,8 @@
 <link rel="canonical" href="https://www.mywebsite.com/page">
 <link rel="icon" href="/favicon.ico">
 <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-<link rel="apple-touch-icon" href="/pwa/favicon.png">
-<link rel="manifest" href="/pwa/manifest.json">
+<link rel="apple-touch-icon" href="/files/favicon.png">
+<link rel="manifest" href="/files/manifest.json">
 <meta name="theme-color" content="#fff"/>
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link
@@ -32,3 +32,4 @@ href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"
 />
 <link rel="stylesheet" href="styles/main.css" />
 </head>
+<script src="files/serviceworker.js"></script>
