--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -531,7 +531,7 @@
 				try {
 				  await navigator
 						.serviceWorker
-						.register('files/serviceworker.js');
+						.register('serviceworker.js');
 				}
 				catch (e) {
 				  console.log('SW registration failed');
