--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -1,3 +1,4 @@
+<button type="button" aria-label="button" class="pwa-install-btn">Установите сайт как приложение на главный экран</button>
 <footer class="footer">
     <div class="footer__top">
     <form action="#" class="footer__mail">
