--- a/src/html/parts/head.html
+++ b/src/html/parts/head.html
@@ -12,9 +12,15 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta property="og:url" content="https://www.mywebsite.com/page">
 <link rel="canonical" href="https://www.mywebsite.com/page">
-<link rel="icon" href="/favicon.ico">
+<link rel="icon" href="favicon.png">
 <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-<link rel="apple-touch-icon" href="favicon.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Real Action">
+<meta name="apple-mobile-web-app-status-bar-style" content="white">
+<link rel="apple-touch-icon" sizes="152x152" href="favicon.png" type="image/png">
+<link rel="apple-touch-icon" sizes="167x167" href="favicon.png" type="image/png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicon.png" type="image/png">
+<link rel="mask-icon" href="favicon.png" color="#5bbad5">
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#fff"/>
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
