--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -1,4 +1,4 @@
-<button type="button" aria-label="button" class="pwa-install-btn">Установите сайт как приложение на главный экран</button>
+<div class="pwa-install-toast">Установите как приложение на айфон: нажмите на <img loading="lazy" decoding="async" src="/resources/images/ios-share-icon.png" alt="image" width="15" height="15">, затем добавить на главный экран</div>
 <footer class="footer">
     <div class="footer__top">
     <form action="#" class="footer__mail">
