--- a/src/html/pages/order-making.html
+++ b/src/html/pages/order-making.html
@@ -683,7 +683,13 @@
                                    </nav>
                                </li>
                                 <li class="order-making-products-card__item order-making-products-card__price"><p><span>1 299</span>₽</p><del class="order-making-products-card__old-price"><span>2 299</span> ₽</del></li>
-                                <li class="order-making-products-card__item order-making-products-card__count"><span>1</span></li>
+                                <li class="order-making-products-card__item order-making-products-card__count">
+                                    <div class="order-making-products-card__counter" x-data="{counter: 1}">
+                                    <span @click="counter--" :class="{'disabled': counter === 1}" class="order-making-products-card__counter-minus">-</span>
+                                        <p x-text="counter">1</p>
+                                        <span @click="counter++" class="order-making-products-card__counter-plus">+</span>
+                                    </div>
+                                </li>
                                 <li class="order-making-products-card__item order-making-products-card__total-sum"><p><span>1 299</span>₽</p></li>
                               </ul>
                             </article>
