--- a/src/html/pages/telEnter.html
+++ b/src/html/pages/telEnter.html
@@ -3,7 +3,8 @@
 	@@include('../parts/head.html',{
 	"title":"Страница входа по телефону"
 	})
-	<body x-data="{mobileMenu:false, headerSearch: false, headerMegaMenu: false, telModal: false,verifyTelModal: false}" :class="{'overflow-hidden': telModal === true || verifyTelModal === true}">
+	<body x-data="{mobileMenu:false, headerSearch: false, headerMegaMenu: false, telModal: false,verifyTelModal: false, telValue: ''}" :class="{'overflow-hidden': telModal === true || verifyTelModal === true}">
+    <script defer src="https://unpkg.com/@alpinejs/mask@3.x.x/dist/cdn.min.js"></script>
 		<script src="js/main.min.js" defer></script>
 		@@include('../parts/header.html')
 		<main>
@@ -24,7 +25,7 @@
 		</main>
     <div class="modal enter-tel-modal" :class="{'active': telModal === true}" @click.self="telModal = false">
       <div class="modal-content enter-tel-modal__content">
-      <form action="#">
+      <form action="#" @submit.prevent="verifyTelModal = true;telModal = false">
       <fieldset>
         <legend class="modal__title enter-tel-modal__title"><h2>Вход или регистрация</h2><button class="modal__close" type="button" aria-label="button" @click="telModal = false">
             <svg width="20" height="20">
@@ -33,7 +34,7 @@
           </button></legend>
           <div class="modal__input-group enter-tel-modal__input-group">
             <label for="phone">Введите номер телефона</label>
-            <input type="tel" name="phone" id="phone" placeholder="+_(___)___-____" required>
+            <input type="tel" name="phone" id="phone" x-mask="+7(999)999-99" placeholder="+_(___)___-____" required x-model="telValue">
         </div>
         <div class="enter-tel-modal__row">
         <p>На этот номер придёт код подтверждения</p>
@@ -56,7 +57,7 @@
         </button></legend>
         <div class="verify-tel-modal__toast">
             <p>Код выслан на номер</p>
-            <a>+7 (905) 806 48 63</a>
+            <a x-text="telValue">+7 (905) 806 48 63</a>
         </div>
         <ul role="list" class="verify-tel-modal__number-list">
             <template x-for="i in 6">
